---------------------------------------------------------------------------------------------------
Version: 3.0.10
Date: ?
  Changes:
    - New icons for glass. Resolves https://github.com/pyanodon/pybugreports/issues/776
---------------------------------------------------------------------------------------------------
Version: 3.0.9
Date: 2024-11-29
  Changes:
    - Fixed casting unit loader output always outputting to the left side of the belt.
---------------------------------------------------------------------------------------------------
Version: 3.0.8
Date: 2024-11-29
  Changes:
    - Fixed casting unit loader output not working in north or east facing directions.
---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: 2024-11-29
  Changes:
    - New graphics for sinter unit. Resolves https://github.com/pyanodon/pybugreports/issues/588
    - The MIBC technology has been moved from logistics science to py science pack 2.
    - [space-age] Decreased the base richness of quartz ore in order to account for the new scaling resource drain rate in the crystal mine.
    - The casting unit now has an inbuilt loader. Works with belt stacking technologies.
      Migration notice: Existing versions of this machine will not have the loader output and be marked with the (Legacy) tag. Remove this tag by simply mining the casting unit and re-building it.
    - Adjusted the limestone recipe. Reduced speed by 4x and increased output by 4x. This is effectively the same recipe however the new ratio is more friendly to belt stacking with stack inserters.
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-15
  Changes:
    - Salt mines no longer requires gas canisters can consume fuel directly.
    - Greatly increased the fuel consumption of the salt mine from 800kW to 20MW.